kubernetes/apps/wake-console/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wake-console
  namespace: wake-console
spec:
  selector:
    app: wake-console
  ports:
    - name: http
      port: 8088
      targetPort: 8088
      protocol: TCP
